--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,13 +1,8 @@
 .container {
-	padding: 0 2rem;
-}
-
-.main {
-	min-height: 100vh;
-	padding: 4rem 0;
+	width: 100%;
 	flex: 1;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: space-evenly;
 	align-items: center;
 }
