--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,24 +1,25 @@
 .footer {
 	width: 100%;
 	text-align: center;
+	margin-top: auto;
+	margin-bottom: 0;
 	// background-color: var(--bs-dark);
 
 	a {
 		font-weight: 600;
 		// color: var(--bs-light);
 		padding: 4px;
+		margin: 0 auto;
 		display: flex;
-		float: right;
 		align-items: center;
 		text-decoration: none;
 		width: fit-content;
 	}
 
 	svg {
-		margin: 0 8px;
+		margin-right: 4px;
 		box-sizing: content-box;
 		border-radius: 50%;
-		padding: 1px;
 		// background-color: var(--bs-light);
 		// fill: var(--bs-dark);
 	}
